--- a/assets/stylesheets/modules/_general.scss
+++ b/assets/stylesheets/modules/_general.scss
@@ -1,25 +1,41 @@
 body {
-    font-family: $base-font-family;
-    font-size: $font-size;
-    font-weight: $font-weight;
-    background: #fff;
+  font-family: $base-font-family;
+  font-size: $font-size;
+  font-weight: $font-weight;
+  background: #fff;
+  color: $color-text;
+
+  a {
+    text-decoration: none;
     color: $color-text;
-    
-
-    a {
-        text-decoration: none;
-        color: $color-text;
-    }
-  
-    strong{
-        font-weight: 800;
-    }
-
-  }
-  section{
-    padding: 45px 0;
   }
 
-  .primary-color{
-    color: $primary-color!important;
+  strong {
+    font-weight: 800;
   }
+  p{
+    line-height: 1.3;
+  }
+
+}
+
+section {
+  padding: 45px 0;
+}
+
+.primary-color {
+  color: $primary-color !important;
+}
+
+.btn {
+  border-radius: 0 !important;
+}
+
+.btn-light {
+  color: $primary-color !important;
+}
+
+img.responsive{
+  width: 100%;
+  height: auto;
+}
