--- a/assets/stylesheets/modules/_header.scss
+++ b/assets/stylesheets/modules/_header.scss
@@ -9,6 +9,20 @@ header {
       max-width: 207px;
     }
   }
+  h2{
+    font-size: 1.5rem!important;
+    @media (max-width: 1200px) {
+      font-size: 22px!important;
+    }
+    @media (max-width: 768px) {
+      text-align: right;
+      font-size: 20px!important;
+      font-weight: bold;
+      span{
+        font-size: 14px!important;
+      }
+    }
+  }
 }
 
 .home{
