--- a/assets/stylesheets/modules/_titles.scss
+++ b/assets/stylesheets/modules/_titles.scss
@@ -1,7 +1,21 @@
+h2, .h2
+h3, .h3{
+ margin-bottom: 25px;
+}
+
 .titulo-page {
     font-size: calc-rem(48px);
 }
 .titulo-secao {
+    @media (max-width: 768px) {
+        text-align: center;
+    }
+    h2{
+        font-weight: 900!important;
+        span{
+            color: $primary-color!important;
+        }
+    }
     h3{
         font-size: calc-rem(28px);
         font-weight: 900!important;
