--- a/assets/stylesheets/templates/_dados.scss
+++ b/assets/stylesheets/templates/_dados.scss
@@ -41,19 +41,19 @@
                 margin-bottom: 10px;
             }
             &.historia{
-                background: url(../images/historia.webp) no-repeat;
+                background: url(../images/historia.webp?v1) no-repeat;
                 background-size: cover;
             }
             &.entregues{
-                background: url(../images/entregues.webp) no-repeat;
+                background: url(../images/entregues.webp?v1) no-repeat;
                 background-size: cover;
             }
             &.pontos{
-                background: url(../images/pontos.webp) no-repeat;
+                background: url(../images/pontos.webp?v1) no-repeat;
                 background-size: cover;
             }
             &.colaboradores{
-                background: url(../images/colaboradores.webp) no-repeat;
+                background: url(../images/colaboradores.webp?v1) no-repeat;
                 background-size: cover;
             }
         }
